--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@1,700&family=Shippori+Mincho:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Internet Shoes</title>
   </head>
   <body>
